# cashpilot

./: AGENTS.md  Dockerfile  Dockerfile.worker  README.md  ROADMAP.md  docker-compose.fleet.yml  docker-compose.standalone.yml  docker-compose.yml  pyproject.toml  requirements-worker.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  lint.yml  release.yml
app/: auth.py  compose_generator.py  constants.py  database.py  exchange_rates.py  federation.py  main.py  orchestrator.py  worker_api.py  ws_client.py  ws_server.py
app/collectors/: __init__.py  base.py  bitping.py  bytelixir.py  earnapp.py  earnfm.py  grass.py  mystnodes.py  packetstream.py  proxyrack.py  repocket.py  storj.py  traffmonetizer.py
app/templates/: auth.html  base.html  dashboard.html  fleet.html  service_detail.html  settings.html  setup.html
docs/guides/: README.md  anyone-protocol.md  bitping.md  blockmesh.md  bytebenefit.md  bytelixir.md  dawn.md  earnapp.md  earnfm.md  ebesucher.md  gaganode.md  golem.md  gradient.md  grass.md  honeygain.md  iproyal.md  mysterium.md  network3.md  nodepay.md  nosana.md  packetshare.md  packetstream.md  passiveapp.md  proxybase.md  proxylite.md  proxyrack.md  repocket.md  salad.md  speedshare.md  spide.md  storj.md  teneo.md  titan.md  traffmonetizer.md  uprock.md  urnetwork.md  vast-ai.md  wipter.md  wizardgain.md
scripts/: generate_docs.py
services/: _schema.yml
services/bandwidth/: adnade.yml  antgain.yml  bitping.yml  bytebenefit.yml  bytelixir.yml  earnapp.yml  earnfm.yml  ebesucher.yml  honeygain.yml  iproyal.yml  mysterium.yml  packetshare.yml  packetstream.yml  peer2profit.yml  spide.yml  (+8 more)
(+28 files in other folders)
